--- a/misc/org-babel.org
+++ b/misc/org-babel.org
@@ -1,3 +1,13 @@
+* python
+#+begin_src python :file my_python_file.py
+
+  print("This is my python file.")
+  #+end_src
+
+  #+RESULTS:
+  [[file:my_python_file.py]]
+
+* py
 #+BEGIN_SRC python :tangle double-space.py
   print(str(5+5))
 #+END_SRC
